Restore deprecated method call to maintain compatibility with JDK 17.